--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -105,7 +105,7 @@ h2 {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    
+
 }
 .car {
     border: $border_main;
@@ -127,4 +127,7 @@ hr {
     background-color: $color_third;
     border: none;
     height: 1px;
+}
+#back{
+    cursor: pointer;
 }
