--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -108,7 +108,7 @@ h2 {
     font-weight: 900;
 }
 
-.car-price, #car-buy {
+.car-price, #car-buy, #car-buy-final {
     @include button;
     margin-bottom: 20px;
     cursor: pointer;
@@ -156,8 +156,8 @@ hr {
     @include font_H2_span;
     font-family: $font_basic;
     font-weight: 500;
-    padding: 0.5em 0;
-    margin: 0;
+    padding-bottom: 0.5em ;
+    margin: 30px 0 0 0;
 }
 .car-brand, .car-year, .car-km{
     color: $color_secend;
@@ -203,4 +203,8 @@ margin: 30px 0;
 #car-buy{
 position: absolute;
 top: 625px;
+}
+.non-active{
+  color: #ff8a00;
+
 }
